[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name (PyPI). The import package stays `engram` (see [tool.setuptools]).
# `engram-memory` was unavailable on PyPI, so the distribution is `engram-agent-memory`.
name = "engram-agent-memory"
version = "0.2.0"
description = "Persistent, queryable knowledge storage for AI agents. Markdown source + SQLite + manifest fallback."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stryder Tech", email = "admin@strydertech.com"}
]
keywords = ["ai", "memory", "knowledge", "agent", "sqlite", "persistent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/Driftah9/engram-agent-memory"
Documentation = "https://github.com/Driftah9/engram-agent-memory#readme"
Repository = "https://github.com/Driftah9/engram-agent-memory.git"
Issues = "https://github.com/Driftah9/engram-agent-memory/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
ignore = ["E501"]  # line-too-long (black handles this)
